# Aerie-Part-Management-DEMO

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.cursor/rules/: project-rules.md
backend/: README.md  config.py  create_config.py  deploy.py  pyproject.toml  requirements.txt  run.py  run_prod.py  setup_backend_service.sh
backend/app/: __init__.py
backend/models/: __init__.py  part.py
backend/routes/: __init__.py  parts.py
backend/utils/: __init__.py  auth.py  step_converter.py  validation.py
code-docs/: flow-overview.md
code-docs/frontend/: modules-reference.md  modules.md  overview.md  ui-components.md  utilities.md
src/: main.js  style.css
src/components/: threeDViewer.js
src/core/api/: apiClient.js  partsApi.js  router.js
src/core/auth/: auth.js
src/core/demo_api/: index.js  seedData.js  store.js
src/core/dom/: modalManager.js
src/css/: animations.css  base.css  components.css  modals.css  status.css
src/features/auth/: auth.js
src/features/forms/: formHandler.js
src/features/modals/: infoModals.js  modals.js
src/features/navigation/: tabs.js
src/html/: add-modal.html  assign-modal.html  auth-modal.html  complete-amount-modal.html  completed-content.html  drawing-modal.html  hand-content.html  header.html  review-content.html  settings-modal.html  tabs.html  unclaim-modal.html
src/modules/: auth.js  cnc.js  completed.js  formHandler.js  handFab.js  infoModals.js  modals.js  partActions.js  review.js  state.js  tabs.js
src/utils/: apiClient.js  confetti.js  helpers.js  partsApi.js
(+17 files in other folders)
