 [build-system]
 requires = ["setuptools>=65", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "part-management-backend"
 version = "0.1.0"
 description = "Backend for the part management system."
 requires-python = "==3.12"
 dependencies = [
   "Flask==3.0.0",
   "Flask-SQLAlchemy==3.1.1",
   "Flask-CORS==4.0.0",
   "python-dotenv==1.1.0",
   "requests==2.32.3",
   "cascadio==0.0.13",
   "numpy==1.26.4",
   "Werkzeug==3.1.3",
   "SQLAlchemy==2.0.35",
 ]

 [project.optional-dependencies]
 wsgi = [
   "gunicorn==23.0.0",
   "waitress==3.0.0",
   "eventlet==0.36.1",
   "gevent==24.2.1",
 ]
